# sistema-diligencias

./: .gitignore  README.md  package-lock.json  package.json  projeto_estrutura.txt  pyproject.toml  requirements.txt  setup.py
docs/: INSTALL.md  USER_MANUAL.md
scripts/: build.py  deploy_windows.bat  install_dependencies.py  scripts_deploy_windows.bat
src/: __init__.py  config.py  database.py  main.py  sistema_diligencias.py  src_main.py  src_utils.py  utils.py
tests/: test_deploy.py
