[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "sistema-diligencias"
version = "2.0.0"
description = "Sistema de Controle de Diligências"
readme = "README.md"
authors = [{name = "medeiros27"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Legal Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.7"
dependencies = [
    "pandas>=1.3.0",
    "matplotlib>=3.3.0",
    "openpyxl>=3.0.0",
    "Pillow>=8.0.0",
]

[project.scripts]
sistema-diligencias = "src.main:main"

[project.urls]
Homepage = "https://github.com/medeiros27/softwarejurisconnect"
Repository = "https://github.com/medeiros27/softwarejurisconnect"
Issues = "https://github.com/medeiros27/softwarejurisconnect/issues"